--- a/semana11.html
+++ b/semana11.html
@@ -155,6 +155,17 @@
 							</div>
 				<video src="img/elements/video2.mp4" poster="video1.mp4" controls></video>
 <video src="video.mp4" autoplay muted loop></video>
+				/div>
+				<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
+							<img src="img/elements/159.PNG" alt="" class="png-fluid">
+					
+								</div> 
+						</div>
+				    </div>
+				
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>La paciente comentó que sentía comodidad pero seguía surgiendo una leve caída del pie y la marcha mejoró a una mínimo de lo esperado, por el cual concluimos la falta de soporte del pie para mantenerlo a 90°.</p>
 				</div>
