--- a/semana11.html
+++ b/semana11.html
@@ -155,7 +155,7 @@
 							</div>
 				<video src="img/elements/video2.mp4" poster="video1.mp4" controls></video>
 <video src="video.mp4" autoplay muted loop></video>
-				/div>
+				</div>
 				<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
