--- a/semana11.html
+++ b/semana11.html
@@ -158,7 +158,7 @@
 				</div>
 				<div class="section-top-center">
 					<div style="text-align:center">
-						<div class="row gallery-item  justify-content-center">
+						<div class="row gallery-item  justify-content-border">
 							<div class="col-md-4">
 							<img src="img/elements/159.PNG" alt="" class="png-fluid">
 					
