--- a/semana13.html
+++ b/semana13.html
@@ -91,8 +91,21 @@
 				</div>
 			</section>
 			<!-- End Sample Area -->
-
-				<!-- Start Sample Area -->
+				<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
+							<img src="img/elements/12345678.PNG" alt="" class="png-fluid">
+							</div>
+							<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
+							<img src="img/elements/12345678.PNG" alt="" class="png-fluid">
+					     </div>
+							  </div>
+						  </div>
+			<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 					<h2 class="text-black">Evaluación de satisfacción del usuario de Quebec con tecnología de asistencia
