--- a/semana13.html
+++ b/semana13.html
@@ -93,15 +93,15 @@
 			<!-- End Sample Area -->
 				<div class="section-top-center">
 					<div style="text-align:center">
-						<div class="row gallery-item  justify-content-center">
+						<div class="row gallery-item  justify-content-border">
 							<div class="col-md-4">
-							<img src="img/elements/12345678.PNG" alt="" class="png-fluid">
+							<img src="img/elements/22.PNG" alt="" class="png-fluid">
 							</div>
 							<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-							<img src="img/elements/12345678.PNG" alt="" class="png-fluid">
+							<img src="img/elements/33.PNG" alt="" class="png-fluid">
 					     </div>
 							  </div>
 						  </div>
