--- a/semana13.html
+++ b/semana13.html
@@ -93,18 +93,15 @@
 			<!-- End Sample Area -->
 				<div class="section-top-center">
 					<div style="text-align:center">
-						<div class="row gallery-item  justify-content-border">
-							<div class="col-md-4">
-							<img src="img/elements/22.PNG" alt="" class="png-fluid">
-							</div>
-							<div class="section-top-center">
-					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-							<img src="img/elements/33.PNG" alt="" class="png-fluid">
-					     </div>
-							  </div>
+							<img src="img/elements/222.PNG" alt="" class="png-fluid">
+							</div>
+							<video src="img/elements/video2.mp4" poster="video1.mp4" controls></video>
+<video src="video.mp4" autoplay muted loop></video>
+					</div>
 						  </div>
+					 </div>
 			<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
