--- a/semana13.html
+++ b/semana13.html
@@ -91,17 +91,23 @@
 				</div>
 			</section>
 			<!-- End Sample Area -->
+				<!-- Start Sample Area -->
 				<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
 							<img src="img/elements/222.PNG" alt="" class="png-fluid">
 							</div>
+							</div>
+					 </div>
+					<!-- End Sample Area -->
+					<!-- Start Sample Area -->
 							<video src="img/elements/video4.mp4" poster="video1.mp4" controls></video>
-<video src="video.mp4" autoplay muted loop></video>
+                                                  <video src="video.mp4" autoplay muted loop></video>
 					</div>
 						  </div>
 					 </div>
+		<!-- End Sample Area -->
 			<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
