--- a/semana13.html
+++ b/semana13.html
@@ -102,6 +102,8 @@
 					 </div>
 					<!-- End Sample Area -->
 					<!-- Start Sample Area -->
+					<div class="section-top-center">
+					<div style="text-align:center">
 							<video src="img/elements/video4.mp4" poster="video1.mp4" controls></video>
                                                   <video src="video.mp4" autoplay muted loop></video>
 					</div>
