--- a/semana13.html
+++ b/semana13.html
@@ -87,7 +87,7 @@
 				<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h2 class="text-black">Comparación y evaluación (QUEST) del DAFO impreso en 3D y el AFO convencional a través de la experiencia del usuario</h2>	
+					<h2 class="text-black">Comparación y evaluación(QUEST) del DAFO impreso en 3D y el AFO convencional a través de la experiencia del usuario</h2>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
@@ -102,6 +102,13 @@
 					 </div>
 					<!-- End Sample Area -->
 					<!-- Start Sample Area -->
+		        <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h2 class="text-black">Video de la marcha del paciente con el AFO convencional</h2>	
+				</div>
+			</section>
+			<!-- End Sample Area -->
+					<!-- Start Sample Area -->
 					<div class="section-top-center">
 					<div style="text-align:center">
 							<video src="img/elements/video4.mp4" poster="video1.mp4" controls></video>
@@ -110,6 +117,22 @@
 						  </div>
 					 </div>
 		<!-- End Sample Area -->
+			<!-- Start Sample Area -->
+		        <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h2 class="text-black">Video de la marcha del paciente con el DAFO </h2>	
+				</div>
+			</section>
+			<!-- End Sample Area -->
+					<!-- Start Sample Area -->
+					<div class="section-top-center">
+					<div style="text-align:center">
+							<video src="img/elements/video3.mp4" poster="video1.mp4" controls></video>
+                                                  <video src="video.mp4" autoplay muted loop></video>
+					</div>
+						  </div>
+					 </div>
+		<!-- End Sample Area -->	
 			<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
