--- a/semana3.html
+++ b/semana3.html
@@ -378,16 +378,16 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 					<!-- Start Align Area -->
 					<div class="whole-wrap">
 				<div class="container">
-					<div class="section-top-border">
+					<div class="section-top-center">
 						<h2 class="mb-30">REFERENCIAS</h2>
 						</div>
-					         <div class="col-md-5 mt-sm-10 right-align-p">
-								<p>-Orovio CC. Papel de las ortesis (AFO) de la marcha en la rehabilitación del paciente con hemiplejia post ictus. :42.</p>
-							 <p>-T.Taiming Chu ,Biomechanics of ankle-foot orthoses:past, present, and future.Top Stroke Rehabil, 7 (2001), pp. 19-28.</p>
+					         <div class="col-md-5 mt-sm-10 right-align-center">
+							 <p>-Innovative neurotronics. (2006). Manual del usuario del sistema Walkaide. Medical Device & QA Services.</p>
+							 <p>-José Gorgues (2007)Confección y adaptación de la ortesis antiequina de termoplástico tipo «Rancho de los amigos»Vol. 26. Núm. 10.Noviembre 2007 páginas 11-141.</p>
+							 <p>-Orovio CC. Papel de las ortesis (AFO) de la marcha en la rehabilitación del paciente con hemiplejia post ictus. :42.</p>
+					<p>-T.Taiming Chu ,Biomechanics of ankle-foot orthoses:past, present, and future.Top Stroke Rehabil, 7 (2001), pp. 19-28.</p>
 							 <p>-Unidad de Lesionados Medulares de Gran Canaria. (2018). Manual de Lesionados Medulares . Las Palmas de Gran Canaria: caleidoscopio.</p>
-                                                         <p>-José Gorgues (2007)Confección y adaptación de la ortesis antiequina de termoplástico tipo «Rancho de los amigos»Vol. 26. Núm. 10.Noviembre 2007 páginas 11-141.</p>
-							  <p>-Innovative neurotronics. (2006). Manual del usuario del sistema Walkaide. Medical Device & QA Services.</p>
-					                  </div>
+					</div>
 					        </div>
 					</div>	
 					<!-- End Sample Area -->
