--- a/semana4.html
+++ b/semana4.html
@@ -97,7 +97,7 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/cc.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cc.PNG);"></div></a>
+								<a href="img/cc.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cc.png);"></div></a>
 						          </div>
 					        </div>
 					</div>
