--- a/semana4.html
+++ b/semana4.html
@@ -93,14 +93,15 @@
 			</section>
 			<!-- End Sample Area -->
 				<!-- Start Align Area -->
-				<div class="section-top-center">
+			<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/cc.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cc.png);"></div></a>
-						          </div>
-					        </div>
-					</div>
+							<img src="img/elements/cc.png" alt="" class="png-fluid">
+					
+								</div> 
+						</div>
+				    </div>
 				<!-- Start Sample Area -->
 				 <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
