--- a/semana4.html
+++ b/semana4.html
@@ -95,7 +95,7 @@
 				<!-- Start Align Area -->
 			<div class="section-top-center">
 					<div style="text-align:center">
-						<div class="row gallery-item  justify-content-center">
+						<div class="row gallery-item  justify-content-border">
 							<div class="col-md-4">
 							<img src="img/elements/cc.png" alt="" class="png-fluid">
 					
