--- a/semana12.html
+++ b/semana12.html
@@ -93,7 +93,7 @@
 			<!-- End Sample Area -->
 
 			<!-- Start Sample Area -->
-				 <section class="row d-flex align-items-center justify-content-border">
+				 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
 								<p>En base a las evaluaciones realizadas y los resultados adversos que se obtuvo,   se desarrolló una mejora con ayuda de los  ingenieros y el médico, una de las opciones era  imprimir toda la ortesis con un material diferente o convertir el AFO en DAFO.</p>
 						       <p><b>Procedimiento</b></p>
