--- a/semana13.html
+++ b/semana13.html
@@ -167,6 +167,7 @@ QUEST (Versión 2.0)</h2>
 							</div> 
 					 </div> 
 					<!-- End Sample Area -->
+					<!-- Start Sample Area -->
 							 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
 					<p></p>
