--- a/semana13.html
+++ b/semana13.html
@@ -185,7 +185,7 @@ QUEST (Versión 2.0)</h2>
 					 <!-- Start Sample Area -->
 					 <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h2 class="text-black">DISPOSITIVO DE ASISTENCIA</h2>	
+					<h2 class="text-black"></h2>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
