--- a/semana13.html
+++ b/semana13.html
@@ -162,14 +162,13 @@ QUEST (Versión 2.0)</h2>
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
 							<img src="img/elements/yy.PNG" alt="" class="png-fluid">
-					
-								</div> 
+					                 </div> 
 							</div> 
 					 </div> 
 					<!-- End Sample Area -->
 					<!-- Start Sample Area -->
 							 <section class="row d-flex align-items-center justify-content-center">
-				 <div class="col-md-5 mt-sm-5 center-align-p">
+				 <div class="col-md-5 mt-sm-5 center-align-center">
 					<p></p>
 					 <p></p>
 					 <p>• Marque con un círculo o marque el número que mejor describe su grado de satisfacción con cada uno de los 12 artículos.</p>
