--- a/semana13.html
+++ b/semana13.html
@@ -94,7 +94,7 @@
 				<!-- Start Sample Area -->
 				 <section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
-								<p><b>Dispositivo tecnológico:</b>Ortesis DAFO</p>
+								<p><b>Dispositivo tecnológico:</b>Ortesis AFO convencional</p>
 						       <p><b>Nombre de usuario:</b>Angie Benites</p>
 					 <p><b>Fecha de evaluación:</b>18/06/19</p>
 					  <p>El propósito del cuestionario<b>QUEST</b>es evaluar cuán satisfecho está con su dispositivo de asistencia y los servicios relacionados que ha experimentado. El cuestionario consta de 12 artículos de satisfacción.</p>
