--- a/semana10.html
+++ b/semana10.html
@@ -117,9 +117,9 @@
 						<h3 class="mb-30">INTEGRACION DE LOS VELCROS</h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Luego de obtener el AFO impresa en 3D  procedimos a quitar la estructura de soporte y alisar las superficies para luego colocar los velcros en la planta y la pierna 
-.</p>
-							</div>
+								<p>Luego de obtener el AFO impresa en 3D  procedimos a quitar la estructura de soporte y alisar las superficies para luego colocar los velcros en la planta y la pierna .</p>
+					<p>El material de ajuste que se utilizará para el proyecto será el  cierre tipo gancho y bucle denominado comercialmente VELCRO®. Ya que el uso de nuestra de nuestra ortesis será utilizado dentro de los zapatos del usuario y los cierres de compresión ajustables no permitirían esto.</p>		
+					</div>
 				<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
