--- a/semana9.html
+++ b/semana9.html
@@ -130,7 +130,7 @@ Para la impresión 3D del AFO  se utilizo el tipo de filamento PLA el cual fue e
 						<h3 class="mb-30"></h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Basándonos en las necesidades requeridas para el proyecto y las propiedades de los filamentos concluimos que el filamento PLA es el más óptimo para la realización del proyecto.</p>
+								<p>Basándonos en las necesidades requeridas para el proyecto y las propiedades de los filamentos concluimos que el FLEXFIL es el más óptimo para la realización del proyecto.</p>
 					<!-- End Sample Area -->
 					 <div class="whole-wrap">
 				<div class="container">
