--- a/semana10.html
+++ b/semana10.html
@@ -180,6 +180,19 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
 							<img src="img/elements/1234567.PNG" alt="" class="png-fluid">
+								<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
+								<a href="img/elements/cuadropla1.PNG" width="300" height="300" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cuadropla1.PNG);"></div></a>
+						          </div>
+							<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30"></h3>
+							</div>
+				 <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>Basándonos en las necesidades requeridas para el proyecto y las propiedades de los filamentos concluimos que el FLEXFIL es el más óptimo para la realización del proyecto.</p>
 					
 								</div> 
 						</div>
