--- a/semana10.html
+++ b/semana10.html
@@ -186,6 +186,10 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 							<div class="col-md-4">
 								<a href="img/elements/cuadropla1.PNG" width="300" height="300" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cuadropla1.PNG);"></div></a>
 						          </div>
+							</div>
+						</div>
+									<!-- End Sample Area -->
+						<!-- Start Sample Area -->
 							<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
