--- a/semana10.html
+++ b/semana10.html
@@ -180,6 +180,11 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
 							<img src="img/elements/1234567.PNG" alt="" class="png-fluid">
+								</div>
+							</div>
+						</div>
+								<!-- End Sample Area -->
+						<!-- Start Sample Area -->
 								<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
