--- a/semana10.html
+++ b/semana10.html
@@ -201,7 +201,7 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 						<h3 class="mb-30"></h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Basándonos en las necesidades requeridas para el proyecto y las propiedades de los filamentos concluimos que el FLEXFIL es el más óptimo para la realización del proyecto.</p>
+								<p>Basándonos en las necesidades requeridas para el proyecto y las propiedades de los filamentos concluimos que el filamento PLA es el más óptimo para la realización del proyecto.</p>
 					
 								</div> 
 						</div>
