--- a/semana2.html
+++ b/semana2.html
@@ -210,22 +210,22 @@ Posición extraña o torcida del cuello o la     espalda </p>
 					</div>
 						<div class="whole-wrap">
 				<div class="container">
-					<div class="section-top-border">
+					<div class="section-top-center">
 						<h2 class="mb-30">CASO CLÍNICO</h2>
 						</div>
-					         <div class="col-md-9 mt-sm-20 left-align-p">
-								<p>Paciente:​ Mujer (NN) de  35 años de edad.</p>
-							 <p>Estado civil: C​asada</p>
-							 <p>Natural: ​ Lima</p>
-							 <p>Procedente: ​ Cercado de Lima</p>
-							 <p>Ocupación: ​ Estudiante</p>
-							 <p>Antecedentes: Familiares: Papá: aparentemente sana ; Mamá: aparentemente sana</p>
-							 <p>Enfermedades previas:​ ​ N​iega</p>
-							 <p>Medicinas: ​ Niega medicaciones actualmente</p>
-							 <p>Tiempo de enfermedad: ​ 40 días</p>
-							 <p>Curso: ​ estacionario</p>
-							 <p>Episodio actual:​ 40 días</p>
-							 <p>Historia Clínica:
+					         <div class="col-md-9 mt-sm-20 left-align-center">
+								<p><b>Paciente:</b>​ Mujer (NN) de  35 años de edad.</p>
+							 <p><b>Estado civil:</b> C​asada</p>
+							 <p><b>Natural:</b> ​ Lima</p>
+							 <p><b>Procedente:</b> ​ Cercado de Lima</p>
+							 <p><b>Ocupación:</b> ​ Estudiante</p>
+							 <p><b>Antecedentes Familiares:</b> Papá: aparentemente sano ; Mamá: aparentemente sana</p>
+							 <p><b>Enfermedades previas:</b>​  Niega</p>
+							 <p><b>Medicinas:</b> ​ Niega medicaciones actualmente</p>
+							 <p><b>Tiempo de enfermedad:</b> ​ 40 días</p>
+							 <p><b>Curso:</b> ​ estacionario</p>
+							 <p><b>Episodio actual:</b>​ 40 días</p>
+							 <p><b>Historia Clínica:</b>
 Paciente ingresa por trauma shock, luego de sufrir heridas por arma de fuego durante asalto, a nivel de abdomen. Como medida de salvataje por su delicado estado ingresó a laparotomía exportatoría donde se evidenció lesión a nivel de ileón, se realiza resección intestinal y colostomía. Luego de estabilizar a paciente, se le realizaron exámenes complementarios, donde se observó lesión a nivel  L5 , con sección medular y fractura de cuerpos vertebrales, ingresa por neurocirugía para estabilizar fractura. Paciente no controla esfìínteres y no siente a momento de realizar deposición y miccionar.</p>
 							 <p></p>
 							 <p></p>
