--- a/semana11.html
+++ b/semana11.html
@@ -153,7 +153,7 @@
 					<div class="section-top-border">
 						<h3 class="mb-30">Video de la marcha del paciente con el prototipo:</h3>
 							</div>
-				<video src="img/elements/video4.mp4" poster="video1.mp4" controls></video>
+				<video src="img/elements/video4.mp4" poster="video1.mp4" controls><div style=”text-align: center;”></video>
 <video src="video.mp4" autoplay muted loop></video>
 				</div>
 				<div class="section-top-center">
