--- a/semana11.html
+++ b/semana11.html
@@ -87,7 +87,7 @@
 			<!-- Start Sample Area -->
 					<div class="whole-wrap">
 				<div class="container">
-					<div class="section-top-border">
+					<div class="section-top-center">
 						<h3 class="mb-30">IMPRESIÓN 3D</h3>
 						<div class="row">
 						<div class="col-md-9 mt-sm-10 left-align-p">
@@ -102,7 +102,7 @@
 							<div class="col-md-4">
 							<img src="img/elements/12345678.PNG" alt="" class="png-fluid">
 					     </div>
-							<div class="col-md-9 mt-sm-10 left-align-p">
+							<div class="col-md-9 mt-sm-10 left-align-center">
 								<p>El soporte rígido obtenido se colocará en el AFO de PET(Polietileno Tereftalato) para que pueda cumplir su función de mantener la posición del pie a 90° y mejorar la estabilidad..</p>
 							</div>
 						</div>
@@ -111,10 +111,10 @@
 			<!-- Start Sample Area -->
 								<div class="whole-wrap">
 				<div class="container">
-					<div class="section-top-border">
+					<div class="section-top-center">
 						<h3 class="mb-30">ADHESIÓN DEL SOPORTE AL AFO DE  POLIETILENO TEREFTALATO</h3>
 							</div>
-				 <div class="col-md-9 mt-sm-10 left-align-p">
+				 <div class="col-md-9 mt-sm-10 left-align-center">
 								<p>Todos los componentes de la ortesis diseñada fueron posicionados y puestos en contacto con la pierna de la paciente para ser evaluados ..</p>
 							</div>
 				<div class="section-top-center">
@@ -131,10 +131,10 @@
 					<!-- Start Sample Area -->
 					<div class="whole-wrap">
 				<div class="container">
-					<div class="section-top-border">
+					<div class="section-top-center">
 						<h3 class="mb-30">EVALUACIÓN DE RESISTENCIA #2</h3>
 							</div>
-				 <div class="col-md-9 mt-sm-10 left-align-p">
+				 <div class="col-md-9 mt-sm-10 left-align-center">
 								<p>Para evaluar la durabilidad  y eficacia del AFO y el soporte  impreso en 3D, se realizó la prueba al paciente y observamos las características de su marcha e identificamos las deficiencias..</p>
 							</div>
 				<div class="section-top-center">
@@ -150,7 +150,7 @@
 			<!-- Start Sample Area -->
 			<div class="whole-wrap">
 			<div class="container">
-					<div class="section-top-border">
+					<div class="section-top-center">
 						<h3 class="mb-30">Video de la marcha del paciente con el prototipo:</h3>
 							</div>
 				<div style=”text-align: center;”>
@@ -167,7 +167,7 @@
 						</div>
 				    </div>
 				
-				 <div class="col-md-9 mt-sm-10 left-align-p">
+				 <div class="col-md-9 mt-sm-10 left-align-center">
 					 <p></p>
 					 <p></p>
 					 <p></p>
