--- a/semana11.html
+++ b/semana11.html
@@ -109,7 +109,7 @@
 				    </div>
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
-								<div class="whole-wrap">
+				<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-center">
 						<h3 class="mb-30">ADHESIÓN DEL SOPORTE AL AFO DE  POLIETILENO TEREFTALATO</h3>
@@ -134,7 +134,7 @@
 					<div class="section-top-center">
 						<h3 class="mb-30">EVALUACIÓN DE RESISTENCIA #2</h3>
 							</div>
-				 <div class="col-md-9 mt-sm-10 left-align-center">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p>Para evaluar la durabilidad  y eficacia del AFO y el soporte  impreso en 3D, se realizó la prueba al paciente y observamos las características de su marcha e identificamos las deficiencias..</p>
 							</div>
 				<div class="section-top-center">
