--- a/semana11.html
+++ b/semana11.html
@@ -114,7 +114,8 @@
 					<div class="section-top-center">
 						<h3 class="mb-30">ADHESIÓN DEL SOPORTE AL AFO DE  POLIETILENO TEREFTALATO</h3>
 							</div>
-				 <div class="col-md-9 mt-sm-10 left-align-center">
+				 <section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-5 mt-sm-5 center-align-p">
 								<p>Todos los componentes de la ortesis diseñada fueron posicionados y puestos en contacto con la pierna de la paciente para ser evaluados ..</p>
 							</div>
 				<div class="section-top-center">
@@ -134,7 +135,8 @@
 					<div class="section-top-center">
 						<h3 class="mb-30">EVALUACIÓN DE RESISTENCIA #2</h3>
 							</div>
-				 <div class="col-md-9 mt-sm-10 center-align-p">
+				 <section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-5 mt-sm-5 center-align-p">
 								<p>Para evaluar la durabilidad  y eficacia del AFO y el soporte  impreso en 3D, se realizó la prueba al paciente y observamos las características de su marcha e identificamos las deficiencias..</p>
 							</div>
 				<div class="section-top-center">
