--- a/semana11.html
+++ b/semana11.html
@@ -102,7 +102,8 @@
 							<div class="col-md-4">
 							<img src="img/elements/12345678.PNG" alt="" class="png-fluid">
 					     </div>
-							<div class="col-md-9 mt-sm-10 left-align-center">
+							<section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p>El soporte rígido obtenido se colocará en el AFO de PET(Polietileno Tereftalato) para que pueda cumplir su función de mantener la posición del pie a 90° y mejorar la estabilidad..</p>
 							</div>
 						</div>
@@ -115,7 +116,7 @@
 						<h3 class="mb-30">ADHESIÓN DEL SOPORTE AL AFO DE  POLIETILENO TEREFTALATO</h3>
 							</div>
 				 <section class="row d-flex align-items-center justify-content-center">
-				 <div class="col-md-5 mt-sm-5 center-align-p">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p>Todos los componentes de la ortesis diseñada fueron posicionados y puestos en contacto con la pierna de la paciente para ser evaluados ..</p>
 							</div>
 				<div class="section-top-center">
@@ -136,7 +137,7 @@
 						<h3 class="mb-30">EVALUACIÓN DE RESISTENCIA #2</h3>
 							</div>
 				 <section class="row d-flex align-items-center justify-content-center">
-				 <div class="col-md-5 mt-sm-5 center-align-p">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p>Para evaluar la durabilidad  y eficacia del AFO y el soporte  impreso en 3D, se realizó la prueba al paciente y observamos las características de su marcha e identificamos las deficiencias..</p>
 							</div>
 				<div class="section-top-center">
