--- a/semana11.html
+++ b/semana11.html
@@ -110,9 +110,8 @@
 				    </div>
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
-				<div class="whole-wrap">
-				<div class="container">
-					<div class="section-top-center">
+				<section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
 						<h3 class="mb-30">ADHESIÓN DEL SOPORTE AL AFO DE  POLIETILENO TEREFTALATO</h3>
 							</div>
 				 <section class="row d-flex align-items-center justify-content-center">
@@ -131,9 +130,8 @@
           
 					<!-- End Sample Area -->
 					<!-- Start Sample Area -->
-					<div class="whole-wrap">
-				<div class="container">
-					<div class="section-top-center">
+				<section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
 						<h3 class="mb-30">EVALUACIÓN DE RESISTENCIA #2</h3>
 							</div>
 				 <section class="row d-flex align-items-center justify-content-center">
