--- a/semana11.html
+++ b/semana11.html
@@ -85,9 +85,8 @@
 			</section>
 			<!-- End banner Area -->
 			<!-- Start Sample Area -->
-					<div class="whole-wrap">
-				<div class="container">
-					<div class="section-top-center">
+				<section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
 						<h3 class="mb-30">IMPRESIÓN 3D</h3>
 						<div class="row">
 						<div class="col-md-9 mt-sm-10 left-align-p">
@@ -149,12 +148,10 @@
 				    </div>
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
-			<div class="whole-wrap">
-			<div class="container">
-					<div class="section-top-center">
+			<section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
 						<h3 class="mb-30">Video de la marcha del paciente con el prototipo:</h3>
 							</div>
-				<div style=”text-align: center;”>
 				<video src="img/elements/video4.mp4" poster="video1.mp4" controls></video>
 <video src="video.mp4" autoplay muted loop></video>
 				</div>
@@ -167,8 +164,8 @@
 								</div> 
 						</div>
 				    </div>
-				
-				 <div class="col-md-9 mt-sm-10 left-align-center">
+					<section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
 					 <p></p>
 					 <p></p>
 					 <p></p>
