--- a/semana11.html
+++ b/semana11.html
@@ -157,7 +157,7 @@
 				</div>
 				<div class="section-top-center">
 					<div style="text-align:center">
-						<div class="row gallery-item  justify-content-border">
+						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
 							<img src="img/elements/159.PNG" alt="" class="png-fluid">
 					
@@ -165,11 +165,11 @@
 						</div>
 				    </div>
 					<section class="row d-flex align-items-center justify-content-center">
-				<div class="about-content col-lg-12">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 					 <p></p>
 					 <p></p>
 					 <p></p>
-								<p>Como se puede observar el soporte no tuvo la eficacia que se esperaba y terminó quebrándose, a continuación se realizaron algunas conclusiones:</p>
+				         <p>Como se puede observar el soporte no tuvo la eficacia que se esperaba y terminó quebrándose, a continuación se realizaron algunas conclusiones:</p>
 					 <p>Motivos por el que se rompió el soporte :</p>
 					 <p>.El paciente modelo con el que estamos trabajando si puede realizar la marcha correctamente  y al momento de usarlo quebró los puntos que mantenían la posición de 90°. </p>
 					 <p>.El tipo de filamento que se usó para el soporte no era el adecuado en la zona o  puntos que mantenían la posición de 90°.</p>
