--- a/semana11.html
+++ b/semana11.html
@@ -152,6 +152,10 @@
 				<div class="about-content col-lg-12">
 						<h3 class="mb-30">Video de la marcha del paciente con el prototipo:</h3>
 							</div>
+				<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
 				<video src="img/elements/video4.mp4" poster="video1.mp4" controls></video>
 <video src="video.mp4" autoplay muted loop></video>
 				</div>
