--- a/semana13.html
+++ b/semana13.html
@@ -91,16 +91,15 @@
 				</div>
 			</section>
 			<!-- End Sample Area -->
-					 <!-- Start Sample Area -->
-		                 </div>
+				<!-- Start Sample Area -->
 				<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-							<img src="img/elements/yy.PNG" alt="" class="png-fluid">
-					                 </div> 
-							</div> 
-					 </div> 
+							<img src="img/elements/222.PNG" alt="" class="png-fluid">
+							</div>
+							</div>
+					 </div>
 					<!-- End Sample Area -->
 				<!-- Start Sample Area -->
 				 <section class="row d-flex align-items-center justify-content-center">
