--- a/semana13.html
+++ b/semana13.html
@@ -124,7 +124,7 @@
 					<!-- End Sample Area -->
 					<!-- Start Sample Area -->
 							 <section class="row d-flex align-items-center justify-content-center">
-				 <div class="col-md-5 mt-sm-5 center-align-center">
+				 <div class="col-md-5 mt-sm-5 center-align-p">
 					<p></p>
 					 <p></p>
 					 <p>• Marque con un círculo o marque el número que mejor describe su grado de satisfacción con cada uno de los 12 artículos.</p>
@@ -461,7 +461,7 @@ QUEST (Versión 2.0)</h2>
 					 </div> 
 					<!-- End Sample Area -->
 					<!-- Start Sample Area -->
-							 <section class="row d-flex align-items-center justify-content-center">
+					<section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-5 mt-sm-5 center-align-p">
 					<p></p>
 					 <p></p>
