--- a/semana13.html
+++ b/semana13.html
@@ -87,7 +87,7 @@
 				<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h2 class="text-black">Comparación y evaluación(QUEST) del DAFO impreso en 3D y el AFO convencional a través de la experiencia del usuario</h2>	
+					<h2 class="text-black">Comparación y evaluación(QUEST) del DAFO impreso y el AFO convencional a través de la experiencia del usuario</h2>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
