--- a/semana11.html
+++ b/semana11.html
@@ -88,19 +88,20 @@
 				<section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 						<h3 class="mb-30">IMPRESIÓN 3D</h3>
-						<div class="row">
-						<div class="col-md-9 mt-sm-10 left-align-p">
-				<div class="whole-wrap">
-				<div class="container">
-					<div class="section-top-border">
-						<h3 class="mb-30"></h3>
+						</section>
 							</div>
+				<!-- End Sample Area -->
+				<!-- Start Sample Area -->
 					<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-							<img src="img/elements/12345678.PNG" alt="" class="png-fluid">
-					     </div>
+							<img src="img/elements/12345678.PNG" alt="" class="png-fluid"
+									</div>
+							</div>
+					 </div>
+						<!-- End Sample Area -->
+						<!-- Start Sample Area -->
 							<section class="row d-flex align-items-center justify-content-center">
 				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p>El soporte rígido obtenido se colocará en el AFO de PET(Polietileno Tereftalato) para que pueda cumplir su función de mantener la posición del pie a 90° y mejorar la estabilidad..</p>
