--- a/semana11.html
+++ b/semana11.html
@@ -176,8 +176,8 @@
 					 <p></p>
 				         <p>Como se puede observar el soporte no tuvo la eficacia que se esperaba y terminó quebrándose, a continuación se realizaron algunas conclusiones:</p>
 					 <p>Motivos por el que se rompió el soporte :</p>
-					 <p>.El paciente modelo con el que estamos trabajando si puede realizar la marcha correctamente  y al momento de usarlo quebró los puntos que mantenían la posición de 90°. </p>
-					 <p>.El tipo de filamento que se usó para el soporte no era el adecuado en la zona o  puntos que mantenían la posición de 90°.</p>
+					 <p>-El paciente modelo con el que estamos trabajando si puede realizar la marcha correctamente  y al momento de usarlo quebró los puntos que mantenían la posición de 90°. </p>
+					 <p>-El tipo de filamento que se usó para el soporte no era el adecuado en la zona o  puntos que mantenían la posición de 90°.</p>
 					 
 				</div>
 				</div>
