--- a/semana3.html
+++ b/semana3.html
@@ -381,7 +381,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 					<div class="section-top-center">
 						<h2 class="mb-30">REFERENCIAS</h2>
 						</div>
-					         <div class="col-md-5 mt-sm-10 right-align-center">
+					         <div class="col-md-5 mt-sm-10 right-align-border">
 							 <p>-Innovative neurotronics. (2006). Manual del usuario del sistema Walkaide. Medical Device & QA Services.</p>
 							 <p>-José Gorgues (2007)Confección y adaptación de la ortesis antiequina de termoplástico tipo «Rancho de los amigos»Vol. 26. Núm. 10.Noviembre 2007 páginas 11-141.</p>
 							 <p>-Orovio CC. Papel de las ortesis (AFO) de la marcha en la rehabilitación del paciente con hemiplejia post ictus. :42.</p>
