--- a/semana3.html
+++ b/semana3.html
@@ -378,7 +378,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 					<!-- Start Align Area -->
 					<div class="whole-wrap">
 				<div class="container">
-					<div class="section-top-center">
+					<div class="section-top-border">
 						<h2 class="mb-30">REFERENCIAS</h2>
 						</div>
 					         <div class="col-md-5 mt-sm-10 right-align-border">
