--- a/semana3.html
+++ b/semana3.html
@@ -294,10 +294,11 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 				</div>
 			</section>
 			<!-- End Sample Area -->
-			
 			<!-- Start Align Area -->	
-			<div class="row">
-		        <div class="col-md-3">
+			<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
 		        <img src="img/elements/requerimientos.png" alt="" class="png-fluid">
 							</div>
 				<!-- End Sample Area -->
@@ -308,14 +309,14 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 						<h2 class="mb-30">REQUERIMIENTOS PARA EL DISEÑO DE LA ORTESIS</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>RÍGIDO Y DINÁMICO: La importancia de una ortesis dinámica es esencial para el usuario  ya que le permite más libertad y movimiento.</p>
-								<p>LIGERO Y RESISTENTE: La ortesis es necesariamente portátil por lo que tiene que ser ligera y resistente a la misma vez.</p>
-							 <p>FÁCIL DE USAR: En las condiciones del usuario el factor de usabilidad tiene que adecuarse a las limitaciones que presenta. </p>
-								<p>ERGONÓMICO: La ortesis tiene que coincidir con las características fisiológicas y anatómicas para que el usuario interactúe de la mejor manera con el dispositivo.</p>
-							 <p>BIOCOMPATIBLE: El material usado en la ortesis debe ser biocompatible es decir no debe generar rechazo por parte del organismo del usuario </p>
-								<p>MATERIAL DE AJUSTE: Un material que sea capaz de realizar uniones ajustables ligeras de manera rápida y sencilla y a su vez no generar dolor incomodidad al usuario.  </p>
-							 <p>MANUFACTURA: Proceso de fabricación a base de láminas de propileno a calor tomando un molde de pie escaneado en 3D.</p>
-								<p>PERSONALIZADO:El diseño personalizado tiene énfasis en aspectos como el estudio de la pisada del paciente, la adaptación de la plantilla al pie y un buen acabado de la misma para un uso cómodo y efectivo.</p>
+								<p><b>RÍGIDO Y DINÁMICO:</b> La importancia de una ortesis dinámica es esencial para el usuario  ya que le permite más libertad y movimiento.</p>
+								<p><b>LIGERO Y RESISTENTE:</b> La ortesis es necesariamente portátil por lo que tiene que ser ligera y resistente a la misma vez.</p>
+							 <p><b>FÁCIL DE USAR:</b> En las condiciones del usuario el factor de usabilidad tiene que adecuarse a las limitaciones que presenta. </p>
+								<p><b>ERGONÓMICO:</b> La ortesis tiene que coincidir con las características fisiológicas y anatómicas para que el usuario interactúe de la mejor manera con el dispositivo.</p>
+							 <p><b>BIOCOMPATIBLE:</b> El material usado en la ortesis debe ser biocompatible es decir no debe generar rechazo por parte del organismo del usuario </p>
+								<p><b>MATERIAL DE AJUSTE:</b> Un material que sea capaz de realizar uniones ajustables ligeras de manera rápida y sencilla y a su vez no generar dolor incomodidad al usuario.  </p>
+							 <p><b>MANUFACTURA:</b> Proceso de fabricación a base de láminas de propileno a calor tomando un molde de pie escaneado en 3D.</p>
+								<p><b>PERSONALIZADO:</b>El diseño personalizado tiene énfasis en aspectos como el estudio de la pisada del paciente, la adaptación de la plantilla al pie y un buen acabado de la misma para un uso cómodo y efectivo.</p>
 							</div>
 					       </div>
 					</div>
