--- a/semana3.html
+++ b/semana3.html
@@ -94,7 +94,7 @@
 			</section>
 			<!-- End Sample Area -->
 			
-			<!-- Start Align Area -->
+			<!-- Start Sample Area -->
 				<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
@@ -203,13 +203,13 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 				</div>
 			</section>
 			<!-- End Sample Area -->
-					<!-- Start Align Area -->
+					<!-- Start Sample Area -->
 					<div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Durante este taller realizado conjuntamente con Bioincuba se logró generar ideas innovadoras centrandonos en dar solución a las necesidades reales del paciente</p>
 								<p>Empatizar: entender la forma en que las personas hacen las cosas y por qué, sus necesidades físicas y emocionales, cómo piensan en el mundo, y lo que es significativo para ellos.</p>
 							</div>
 					<!-- End Sample Area -->
-					<!-- Start Align Area -->
+					<!-- Start Sample Area -->
 					
 			<div class="whole-wrap">
 				<div class="container">
@@ -294,7 +294,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 				</div>
 			</section>
 			<!-- End Sample Area -->
-			<!-- Start Align Area -->	
+			<!-- Start Sample Area -->	
 			<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
@@ -302,7 +302,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 		        <img src="img/elements/requerimientos.png" alt="" class="png-fluid">
 							</div>
 				<!-- End Sample Area -->
-				<!-- Start Align Area -->
+				<!-- Start Sample Area -->
 			<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
@@ -329,7 +329,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 			</section>
 			<!-- End Sample Area -->
 			
-			<!-- Start Align Area -->
+			<!-- Start Sample Area -->
 			<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
@@ -376,7 +376,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 						</div>
 					</div>
 					<!-- End Sample Area -->
-					<!-- Start Align Area -->
+					<!-- Start Sample Area -->
 					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
