--- a/semana3.html
+++ b/semana3.html
@@ -205,7 +205,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 			<!-- End Sample Area -->
 					<!-- Start Sample Area -->
 					<section class="row d-flex align-items-center justify-content-center">
-				 <div class="col-md-5 mt-sm-5 center-align-p">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p>Durante este taller realizado conjuntamente con Bioincuba se logró generar ideas innovadoras centrandonos en dar solución a las necesidades reales del paciente</p>
 								<p>Empatizar: entender la forma en que las personas hacen las cosas y por qué, sus necesidades físicas y emocionales, cómo piensan en el mundo, y lo que es significativo para ellos.</p>
 							</div>
@@ -218,7 +218,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 				<!-- End Sample Area -->
 					<!-- Start Sample Area -->
 					         <section class="row d-flex align-items-center justify-content-center">
-				 <div class="col-md-5 mt-sm-5 center-align-p">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p>Consistio en "ponernos en los zapatos" del paciente para identificar diferentes actitudes que tomaria el paciente frente al problema que sufre y como sentiria que la veria la sociedad.</p>
 								<p>La incidencia de las LME traumáticas declarada en estudios por países varía entre 13 por millón y 53 por millón. Históricamente, hasta el 90 por ciento de las LME han sido de origen traumático, pero datos de los estudios más recientes indican una leve tendencia al aumento de las LME no traumáticas. Los estudios disponibles reportan una incidencia de las LME no traumáticas de 26 por millón.(OMS)[1] </p>
 							</div>
@@ -246,51 +246,74 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 					<div class="section-top-border">
 						<h2 class="mb-30">DINAMICA 2: AGRUPACIÓN DE PROBLEMAS</h2>
 						</div>
-					         <div class="col-md-9 mt-sm-10 left-align-p">
+					<!-- End Sample Area -->
+					<!-- Start Sample Area -->
+					         <section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p>Definir : es la etapa que trata de dar sentido a la información que se ha reunido y el principal objetivo es crear una declaración de problema significativa y accionable.</p>
 							</div>
-							<div class="row">
-							<div class="col-md-3">
+							 <!-- End Sample Area -->
+					<!-- Start Sample Area -->
+							<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
 								<img src="img/elements/q11.PNG" alt="" class="png-fluid">
-								<div class="row">
-							<div class="col-md-3">
+								</div>
+								<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
 								<img src="img/elements/q2.PNG" alt="" class="png-fluid">
-								<div class="row">
-							<div class="col-md-3">
+							</div>
+								<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
 								<img src="img/elements/q3.PNG" alt="" class="png-fluid">
 							</div>
 						</div>
 					</div>
-								<!-- End banner Area -->	
-
+			<!-- End Sample Area -->		
 			<!-- Start Sample Area -->	
 			        <div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
 						<h2 class="mb-30">DINAMICA 3: ANALISIS RAIZ CAUSA</h2>
 						</div>
-					         <div class="col-md-9 mt-sm-10 left-align-p">
+					<!-- End Sample Area -->	
+
+			<!-- Start Sample Area -->
+					         <section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p>Se realizó el ejercicio de los 5 por que, que tuvo como objetivo que los integantes reflexionen acerca del contexto que hay alrededor del problema que sufre el paciente, para descubrir la raíz de dicho problema. De ésta forma fue más fácil establecer una nueva estrategia, iniciándola desde su origen.</p>
 							</div>
-						</div>
-					</div>
-			
-					<!-- End banner Area -->
-					
+					<!-- End Sample Area -->
 					<!-- Start Sample Area -->	
-									<div class="whole-wrap">
+					 <div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
 						<h2 class="mb-30">DINÁMICA 4: BRAINSTORMING</h2>
 						</div>
-					         <div class="col-md-9 mt-sm-10 left-align-p">
+					<!-- End Sample Area -->	
+
+			<!-- Start Sample Area -->
+					          <section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p>Definir : Es la etapa que trata de dar sentido a la información que se ha reunido y el principal objetivo es crear una declaración de problema significativa y accionable.</p>
 							</div>
-							<div class="row">
-							<div class="col-md-3">
+							  <!-- End Sample Area -->	
+							  <!-- Start Sample Area -->
+							<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
 								<img src="img/elements/br1.PNG" alt="" class="png-fluid">
-								<div class="row">
-							<div class="col-md-3">
+							</div>
+								<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
 								<img src="img/elements/br2.PNG" alt="" class="png-fluid">
 							</div>
 						</div>
