--- a/semana3.html
+++ b/semana3.html
@@ -340,7 +340,10 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 					<div class="section-top-border">
 						<h2 class="mb-30">REQUERIMIENTOS PARA EL DISEÑO DE LA ORTESIS</h2>
 						</div>
-					         <div class="col-md-9 mt-sm-10 left-align-p">
+					<!-- End Sample Area -->
+				<!-- Start Sample Area -->
+					         <section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p><b>RÍGIDO Y DINÁMICO:</b> La importancia de una ortesis dinámica es esencial para el usuario  ya que le permite más libertad y movimiento.</p>
 								<p><b>LIGERO Y RESISTENTE:</b> La ortesis es necesariamente portátil por lo que tiene que ser ligera y resistente a la misma vez.</p>
 							 <p><b>FÁCIL DE USAR:</b> En las condiciones del usuario el factor de usabilidad tiene que adecuarse a las limitaciones que presenta. </p>
