--- a/semana9.html
+++ b/semana9.html
@@ -120,6 +120,7 @@ Para la impresión 3D del AFO  se utilizo el tipo de filamento FLEXFIL </p>
 					                 </div>
 					
 					<!-- End Sample Area -->
+					<!-- Start Sample Area -->
 					 <div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
