--- a/semana9.html
+++ b/semana9.html
@@ -96,25 +96,25 @@
 				 <div class="col-md-5 mt-sm-5 center-align-p">
 					<p>Después de identificar los criterios para el diseño basándonos  en la marcha del paciente procedemos a desarrollar la ortesis con el programa MeshMixer a partir del modelado 3D, para ello definimos el ángulo de 50° del pie como punto de equilibrio , el radio de ambos círculos es de de 2.62 cm en la zona del peroné, luego se realizó un corte plano diagonal de 9 cm en la sección del talón de manera que no afecte al momento de pisar y finalmente una abertura de 0.78cm a la mitad de la sección que une la tibia con el pie para que entre la ortesis con facilidad al pie del paciente.</p>
 					 <!-- End Sample Area -->
-				       <!-- Start Sample Area -->
-					
+				      <!-- Start Sample Area -->
 				<div class="section-top-center">
-					<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/ren1.PNG" width="300" height="300" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren1.PNG);"></div></a>
-						          </div>
-					<div class="section-top-center">
+							<img src="img/elements/tt2.PNG" alt="" class="png-fluid">
+							</div>
+				<div class="section-top-center">
 					<div style="text-align:center">
-					<div class="row gallery-item  justify-content-center">
+						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/ren2.PNG" width="300" height="300" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/ren2.PNG);"></div></a>
-						          </div>
-						<!-- End Sample Area -->
+							<img src="img/elements/tt1.PNG" alt="" class="png-fluid">
+							</div>
+							</div>
+					 </div>
+					<!-- End Sample Area -->
 						<!-- Start Sample Area -->
 				 <section class="row d-flex align-items-center justify-content-center">
-				 <div class="col-md-5 mt-sm-5 center-align-p">
+				 <div class="col-md-9 mt-sm-10 center-align-p">
 								<p>Para la impresión 3D del AFO  se utilizo el tipo de filamento FLEXFIL </p>
 					            <!-- End Sample Area -->
 					<!-- Start Sample Area -->
@@ -123,7 +123,7 @@
 					<div class="section-top-border">
 						<h2 class="mb-30">REFERENCIAS</h2>
 						</div>
-					         <div class="col-md-9 mt-sm-0 left-align-p">
+					         <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>-Alvarez, M. L. C. (1997). El ABC de los plásticos. Universidad Iberoamericana</p>
 					</div>
 					        </div>
