--- a/semana9.html
+++ b/semana9.html
@@ -87,7 +87,7 @@
 			<!-- Start Sample Area -->
 				<section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-						<h3 class="mb-30">DISEÑO Y PREPARACIÓN DEL AFO  </h3>
+						<h1 class="mb-30">DISEÑO Y PREPARACIÓN DEL AFO  </h1>
 						</div>
 			</section>
 			<!-- End Sample Area -->
@@ -118,12 +118,15 @@
 								<p>Para la impresión 3D del AFO  se utilizo el tipo de filamento FLEXFIL </p>
 					            <!-- End Sample Area -->
 					<!-- Start Sample Area -->
-					 <div class="whole-wrap">
-				<div class="container">
-					<div class="section-top-border">
+					<section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
 						<h2 class="mb-30">REFERENCIAS</h2>
 						</div>
-					         <div class="col-md-9 mt-sm-10 left-align-p">
+						</section>
+					<!-- End Sample Area -->
+					<!-- Start Sample Area -->
+					        <section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-5 mt-sm-5 center-align-p">
 								<p>-Alvarez, M. L. C. (1997). El ABC de los plásticos. Universidad Iberoamericana</p>
 					</div>
 					        </div>
