--- a/semana10.html
+++ b/semana10.html
@@ -85,21 +85,19 @@
 			</section>
 			<!-- End banner Area -->
 			<!-- Start Sample Area -->
-					<div class="whole-wrap">
-				<div class="container">
-					<div class="section-top-border">
+				<section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
 						<h3 class="mb-30">AFO Impresa en 3D</h3>
-						<div class="row">
-						<div class="col-md-9 mt-sm-10 left-align-p">
-				<div class="whole-wrap">
-				<div class="container">
-					<div class="section-top-border">
-						<h3 class="mb-30"></h3>
+					</div>
+			</section>
+			<!-- End Sample Area -->
+			<!-- Start Sample Area -->
+					<section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-5 mt-sm-5 center-align-p">
+		<p>Luego de obtener el AFO impresa en 3D  procedimos a quitar la estructura de soporte y alisar las superficies para luego colocar los velcros en la planta y la pierna .</p>
 							</div>
-				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Luego de obtener el AFO impresa en 3D  procedimos a quitar la estructura de soporte y alisar las superficies para luego colocar los velcros en la planta y la pierna 
-.</p>
-							</div>
+					<!-- End Sample Area -->
+			<!-- Start Sample Area -->	
 				<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
@@ -111,15 +109,18 @@
 				    </div>
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
-								<div class="whole-wrap">
-				<div class="container">
-					<div class="section-top-border">
+			 <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
 						<h3 class="mb-30">INTEGRACION DE LOS VELCROS</h3>
 							</div>
+					<!-- End Sample Area -->
+			<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Luego de obtener el AFO impresa en 3D  procedimos a quitar la estructura de soporte y alisar las superficies para luego colocar los velcros en la planta y la pierna .</p>
 					<p>El material de ajuste que se utilizará para el proyecto será el  cierre tipo gancho y bucle denominado comercialmente VELCRO®. Ya que el uso de nuestra de nuestra ortesis será utilizado dentro de los zapatos del usuario y los cierres de compresión ajustables no permitirían esto.</p>		
 					</div>
+					<!-- End Sample Area -->
+			<!-- Start Sample Area -->
 				<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
