--- a/semana10.html
+++ b/semana10.html
@@ -87,7 +87,7 @@
 			<!-- Start Sample Area -->
 				<section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-						<h3 class="mb-30">AFO Impresa en 3D</h3>
+						<h3 class="mb-30">AFO IMPRESA EN 3D</h3>
 					</div>
 			</section>
 			<!-- End Sample Area -->
@@ -109,17 +109,17 @@
 				    </div>
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
-			 <section class="row d-flex align-items-center justify-content-center">
+			<section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-						<h3 class="mb-30">INTEGRACION DE LOS VELCROS</h3>
+						<h2 class="mb-30">INTEGRACION DE LOS VELCROS</h2>
 							</div>
 					<!-- End Sample Area -->
 			<!-- Start Sample Area -->
-				 <div class="col-md-9 mt-sm-10 left-align-p">
+				 <section class="row d-flex align-items-center justify-content-center">
+				 <div class="col-md-5 mt-sm-5 center-align-p">
 								<p>Luego de obtener el AFO impresa en 3D  procedimos a quitar la estructura de soporte y alisar las superficies para luego colocar los velcros en la planta y la pierna .</p>
 					<p>El material de ajuste que se utilizará para el proyecto será el  cierre tipo gancho y bucle denominado comercialmente VELCRO®. Ya que el uso de nuestra de nuestra ortesis será utilizado dentro de los zapatos del usuario y los cierres de compresión ajustables no permitirían esto.</p>		
-					</div>
-					<!-- End Sample Area -->
+			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
 				<div class="section-top-center">
 					<div style="text-align:center">
@@ -136,13 +136,16 @@
 					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">EVALUACIÓN DE RESISTENCIA</h3>
+						<h2 class="mb-30">EVALUACIÓN DE RESISTENCIA</h2>
 							</div>
+					<!-- End Sample Area -->
+					<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Para evaluar la durabilidad  y eficacia del AFO impreso en 3D, se realizó la prueba al paciente y observamos las características de su marcha e identificamos las deficiencias .
 La paciente comentó que sentía comodidad pero seguía surgiendo una leve caída del pie y la marcha mejoró a una mínimo de lo esperado.
 .</p>
-							</div>
+							<!-- End Sample Area -->
+					<!-- Start Sample Area -->
 				<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
@@ -154,28 +157,32 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 				    </div>
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
-			<div class="whole-wrap">
-			<div class="container">
-					<div class="section-top-border">
+			<section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
 						<h3 class="mb-30">Video de la marcha del paciente con la AFO impresa en 3D:</h3>
 							</div>
+				<!-- End Sample Area -->
+			<!-- Start Sample Area -->
 				<video src="img/elements/video1.mp4" poster="video1.mp4" controls></video>
-<video src="video.mp4" autoplay muted loop></video>
+                                <video src="video.mp4" autoplay muted loop></video>
+				<!-- End Sample Area -->
+			<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>La paciente comentó que sentía comodidad pero seguía surgiendo una leve caída del pie y la marcha mejoró a una mínimo de lo esperado, por el cual concluimos la falta de soporte del pie para mantenerlo a 90°.</p>
-				</div>
-				</div>
-				</div>
 					<!-- End Sample Area -->
 						<!-- Start Sample Area -->
 			<div class="whole-wrap">
 			<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">DESARROLLO DE UN SOPORTE </h3>
+						<h2 class="mb-30">DESARROLLO DE UN SOPORTE </h2>
 							</div>
+				<!-- End Sample Area -->
+						<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Con la ortesis obtenida impreso con flexfil se realizo una prueba objetiva en el usuario y observamos que la ortesis no era capaz de mantener el pie en 90 y al momento de caminar se deformaba de tal manera que no mantenia estabilidad en el tobillo .Debido a estos resultados adversos obtenidos  tomamos  como referencia el modelado de la ortesis  hecha de flexfil delimitando la mitad inferior para modelar un soporte rigido que cubra la planta (arco longitudinal) y la parte superior del tobillo,ya que en estas zonas cae el peso del usuario.Además debido a cuestiones de tiempo el soporte rigido se diseno utilizando la tecnica voronoi.Finalmente se pocedio a imprimir el soporte rigido en filamento PLA.</p>
 							</div>
+				<!-- End Sample Area -->
+						<!-- Start Sample Area -->
 				<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
