--- a/semana10.html
+++ b/semana10.html
@@ -133,9 +133,8 @@
           
 					<!-- End Sample Area -->
 					<!-- Start Sample Area -->
-					<div class="whole-wrap">
-				<div class="container">
-					<div class="section-top-border">
+					<section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
 						<h2 class="mb-30">EVALUACIÓN DE RESISTENCIA</h2>
 							</div>
 					<!-- End Sample Area -->
@@ -157,7 +156,7 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 				    </div>
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
-			<section class="row d-flex align-items-center justify-content-center">
+		<section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 						<h3 class="mb-30">Video de la marcha del paciente con la AFO impresa en 3D:</h3>
 							</div>
