--- a/semana10.html
+++ b/semana10.html
@@ -170,16 +170,15 @@ La paciente comentó que sentía comodidad pero seguía surgiendo una leve caíd
 								<p>La paciente comentó que sentía comodidad pero seguía surgiendo una leve caída del pie y la marcha mejoró a una mínimo de lo esperado, por el cual concluimos la falta de soporte del pie para mantenerlo a 90°.</p>
 					<!-- End Sample Area -->
 						<!-- Start Sample Area -->
-			<div class="whole-wrap">
-			<div class="container">
-					<div class="section-top-border">
+			<section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
 						<h2 class="mb-30">DESARROLLO DE UN SOPORTE </h2>
 							</div>
 				<!-- End Sample Area -->
 						<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Con la ortesis obtenida impreso con flexfil se realizo una prueba objetiva en el usuario y observamos que la ortesis no era capaz de mantener el pie en 90 y al momento de caminar se deformaba de tal manera que no mantenia estabilidad en el tobillo .Debido a estos resultados adversos obtenidos  tomamos  como referencia el modelado de la ortesis  hecha de flexfil delimitando la mitad inferior para modelar un soporte rigido que cubra la planta (arco longitudinal) y la parte superior del tobillo,ya que en estas zonas cae el peso del usuario.Además debido a cuestiones de tiempo el soporte rigido se diseno utilizando la tecnica voronoi.Finalmente se pocedio a imprimir el soporte rigido en filamento PLA.</p>
-							</div>
+					 
 				<!-- End Sample Area -->
 						<!-- Start Sample Area -->
 				<div class="section-top-center">
